GNOME Bugzilla – Bug 749425
Memory leak in GtkWindow
Last modified: 2015-05-15 14:44:10 UTC
In commit https://git.gnome.org/browse/gtk+/commit/?id=13e22e20300b7312e52bba7d077fc7e231695fc1 Carlos Garnacho added the GtkGesture* drag_gesture to GtkWindow's private data. That GtkGesture instance is never deleted. It's a memory leak. I suppose it shall be unref'ed in gtk_window_finalize(), just like multipress_gesture is.
Created attachment 303425 [details] [review] patch: gtkwindow: Fix a memory leak
Review of attachment 303425 [details] [review]: Yep, looks good.
Review of attachment 303425 [details] [review]: Pushed https://git.gnome.org/browse/gtk+/commit/?id=12ccebe2a4b1c626a3ec02165de891445297847d