gtkwindow: Fix a memory leak

The private data GtkGesture* drag_gesture was added by commit
13e22e20300b7312e52bba7d077fc7e231695fc1, but it's never destroyed.
Unref it in gtk_window_finalize().

https://bugzilla.gnome.org/show_bug.cgi?id=749425